# scenarioforge

./: .gitignore  .scenarioforge.env.example  MANIFEST.in  Makefile  README.md  attack_graph.json  docker-compose.yml  latest.errors  pyproject.toml  pytest.ini  requirements.txt  test-scenario.xml  test_gen.xml  test_parse.py
.github/: copilot-instructions.md
MCP/: __init__.py  mcp-bridge-servers.json  server.py
TrialRuns/: Generated_1784593671_1.xml  Generated_1784595337_1.xml  latest.errors
docs/: AI_GENERATOR_WORKFLOW.md  AI_PROMPT_TEMPLATES.md  ARCHITECTURE_OVERVIEW.md  CATALOG_BATCH_TESTING.md  CLI_EXECUTION_DEEP_DIVE.md  DEPLOYFORGE.md  FEATURE_DEEP_DIVE.md  FLAG_GENERATORS.md  FLAG_GENERATORS_ALLOWED_INPUTS_OUTPUTS.md  FULL_PREVIEW_WORKFLOW.md  GENERATOR_AUTHORING.md  OPERATING_MODES.md  QUICK_START.md  README.md  RESTRICTIONS_LIMITATIONS.md  SCENARIOFORGE_EVAL_COMPATIBILITY.md  STABILITY_BASELINE_2026-03-07.md  TROUBLESHOOTING.md  openapi.yaml  screenshots.md
examples/: latest.errors  sample.xml
flag_templates/: README.md
generator_templates/: README.md
nginx/: Dockerfile  entrypoint.sh  nginx-hostweb.conf  nginx.conf  render-timeouts.sh
scenarioforge/: __init__.py  cleanup_scenarioforge_docker.py  cli.py  compose_dependencies.py  constants.py  generator_manifests.py  types.py
schemas/: README.md
scripts/: clear_runtime_data.sh  dev-reload.sh  dev_gen_certs.sh  evaluate_ai_generator_accuracy.py  flag_test_core_e2e_check.py  gen_schema_samples.py  migrate_flow_remote_inject_paths.py  prune_vuln_catalog_packs.sh  run_flag_generator.py  (+4 more)
(+565 files in other folders)
